# miden-playground

./: .eslintrc.json  .gitignore  README.md  compose.yaml  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  turbo.json
apps/api/: .env.local.example  Dockerfile  Dockerfile2  docker-compose.yml  drizzle.config.ts  next.config.ts  package.json  process-env.d.ts  proxy.ts  server.js  server2.js  tsconfig.json
apps/api/app/: route.ts
apps/api/counter-contract-deployer/: .gitignore  Cargo.toml
apps/api/counter-contract-deployer/src/: main.rs
apps/api/db/: index.ts  package.ts  packages.ts  relations.ts  schema.ts  verified-account-component.ts  verified-account-components.ts  verified-notes.ts
apps/api/default-packages/basic-wallet/: Cargo.toml  cargo-generate.toml
apps/api/default-packages/basic-wallet/src/: lib.rs
apps/api/examples/counter-contract/: Cargo.toml
apps/api/examples/counter-contract/src/: cc-note.rs  cc-tx.rs  cc.rs  lib.rs
apps/api/examples/counter-note/: Cargo.toml
apps/api/examples/counter-note/src/: lib.rs
apps/api/lib/: constants.ts  counter-contract-deployer.ts  default-dependencies.ts  miden-compiler.ts  miden-package-manifest.ts  miden-package-metadata.ts  miden-verifier.ts  templates.ts  types.ts  utils.ts
apps/api/miden-package-introspection/: Cargo.toml  store.sqlite3
apps/api/miden-package-introspection/src/: counter_script.masm  increment_count.rs  main.rs
apps/api/miden-package-manifest/: Cargo.toml
apps/api/miden-package-metadata/: Cargo.toml  rust-toolchain.toml
apps/api/miden-verifier/: Cargo.toml  rust-toolchain.toml
apps/api/miden-verifier/src/: main.rs
apps/api/templates/: account.rs  authentication-component.rs  counter-account.rs  counter-contract.rs  counter-note.rs  miden-toolchain.toml  note-script.rs  note.rs  p2id-note.rs  transaction-script.rs  tx-script.rs
apps/api/templates/account/: Cargo.toml
apps/api/templates/account/src/: lib.rs
apps/api/templates/authentication-component/: Cargo.toml
apps/api/templates/note-script/: Cargo.toml
apps/api/templates/project-template/: Cargo.toml  rust-toolchain.toml
apps/api/templates/project-template/.cargo/: config.toml
apps/api/templates/transaction-script/: Cargo.toml
apps/api/templates/transaction-script/src/: lib.rs
apps/web/: .dev.vars  cloudflare-env.d.ts  mdx-components.tsx  mdx.d.ts  middleware.ts  next.config.mjs  next.config.ts  package.json  process-env.d.ts  proxy.ts  tsconfig.json  window.d.ts  wrangler.jsonc
apps/web/app/: layout.tsx
apps/web/components/: miden-sdk-context.tsx  mock-web-client-context.tsx  providers-no-ssr.tsx  providers.tsx  simple-analytics-provider.tsx  web-client-context.tsx  web-client-provider.tsx
apps/web/hooks/: use-accounts.ts  use-app-state.ts  use-components.ts  use-examples.ts  use-miden-sdk.ts  use-miden-wallet.ts  use-multisig.ts  use-network.ts  use-notes.ts  use-projects.ts  use-scripts.ts  use-transactions.ts  use-tutorials.ts  use-web-client.ts
apps/web/lib/: actions.ts  api.ts  constants.ts  miden-client.ts  miden-faucet.ts  mock-web-client.ts  multisig-client.ts  para-miden.ts  psm-client.ts  simple-analytics.ts  types.ts  utils.ts  web-client.ts
miden-wasm/: .gitignore  Cargo.toml
miden-wasm/pkg/: developer_playground.js  developer_playground_bg.wasm  miden_playground.d.ts  miden_playground.js  miden_playground_bg.wasm  miden_playground_bg.wasm.d.ts  package.json
miden-wasm/src/: account_builder.rs  bindings.rs  client.rs  lib.rs  mock_chain.rs  mock_host.rs  scripts.rs  serialization.rs  transaction_context.rs  transaction_context_builder.rs  utils.rs  wrappers.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/instructions/: page.tsx
src/components/: ToggleSwitch.tsx  account-code-file.tsx  assets-datatable.tsx  breadcrumbs.tsx  compose-transaction-middle-pan.tsx  compose-transaction-tab.tsx  console.tsx  custom-card.tsx  custom-monaco-editor.tsx  editor-tab.tsx  execution-output.tsx  files.tsx  footer.tsx  header.tsx  instructions-tab.tsx  main-window.tsx  multi-file-editor.tsx  note-card.tsx  output-notes.tsx  overview-data.tsx  overview-details.tsx  playground.tsx  storage.tsx  tabs.tsx  toolbar.tsx  transaction-builder.tsx  transaction-result.tsx  vault.tsx
src/components/account/: index.tsx
src/components/inspector/: accounts-list.tsx  accounts.tsx  asset-explorer.tsx  index.tsx  notes-list.tsx  notes.tsx  transaction-builder.tsx
src/components/notes-list/: index.tsx  note-row.tsx
src/components/ui/: button.tsx  dropdown-menu.tsx  inline-icon.tsx  scroll-area.tsx  select.tsx  switch.tsx  table.tsx  tabs.tsx  textarea.tsx  toast.tsx  tooltip.tsx
src/hooks/: use-toast.ts
src/lib/: account.ts  files.ts  miden-wasm-api.ts  overview-data.ts  tour-steps.ts  tour-steps.tsx  types.ts  utils.ts  wasm-api.ts
src/lib/consts/: account.ts  defaults.ts  index.ts  p2id.ts  secret-key.ts  transaction.ts
src/lib/context-providers/: accounts-context-provider.tsx  files-context-provider.tsx  index.ts  miden-context-provider.tsx  (+1 more)
wasm-mock-web-client/: Cargo.toml
wasm-mock-web-client/src/: account.rs  export.rs  helpers.rs  import.rs  lib.rs  new_account.rs  new_transactions.rs  notes.rs  sync.rs  transactions.rs
wasm-mock-web-client/src/models/: account_builder.rs  account_component.rs  account_delta.rs  account_id.rs  account_storage.rs  account_storage_delta.rs  account_storage_mode.rs  account_storage_requirements.rs  account_vault_delta.rs  assembler.rs  felt.rs  foreign_account.rs  fungible_asset_delta.rs  input_note_record.rs  mod.rs  network_id.rs  note.rs  note_details.rs  note_inputs.rs  note_recipient.rs  note_script.rs  note_tag.rs  public_key.rs  secret_key.rs  storage_map.rs  storage_slot.rs  transaction_filter.rs  transaction_id.rs  transaction_kernel.rs  transaction_record.rs  transaction_script.rs  word.rs
wasm-mock-web-client/src/models/transaction_request/: mod.rs  note_details_and_tag.rs  transaction_request_builder.rs
wasm-mock-web-client/src/utils/: assembler_utils.rs  mod.rs
(+686 files in other folders)
