[package]
name = "counter-contract-deployer"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
miden-client = { version="0.12.3", features = ["testing", "tonic"] }
miden-client-sqlite-store = "0.12.3"
miden-mast-package = "0.19.1"
rand = "0.9"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.46", features = ["rt-multi-thread", "net", "macros", "fs"] }
winter-utils = "0.13.1"
