[package]
name = "miden-package-introspection"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "miden_package_introspection"
path = "src/main.rs"

[[bin]]
name = "increment_count"
path = "src/increment_count.rs"

[dependencies]
miden-client = { version="0.12.3", features = ["testing", "tonic"] }
miden-client-sqlite-store = "0.12.3"
miden-mast-package = "0.19.1"
rand = { version = "0.9" }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.46", features = ["rt-multi-thread", "net", "macros", "fs"] }
winter-utils = "0.13.1"
