[package]
name = "miden-verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
miden-client = { version = "0.12.5", features = ["testing", "tonic"] }
miden-client-sqlite-store = "0.12.5"
miden-mast-package = "0.19.1"
cargo_toml = "0.22.3"
rand = { version = "0.9" }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.46", features = ["rt-multi-thread", "net", "macros", "fs"] }
winter-utils = "0.13.1"
