cargo-features = ["trim-paths"]

[package]
name = "counter-note"
version = "0.1.0"
edition = "2021"

[lib]
# Build this crate as a self-contained, C-style dynamic library
# This is required to emit the proper Wasm module type
crate-type = ["cdylib"]

[dependencies]
# Miden SDK consists of a stdlib (intrinsic functions for VM ops, stdlib functions and types)
# and transaction kernel API for the Miden rollup
miden = { git = "https://github.com/0xMiden/compiler" }

[package.metadata.miden]
project-kind = "note-script"

# TODO: switch to miden table
[package.metadata.component]
package = "miden:counter-note"

# Miden dependencies for cargo-miden build/linking
[package.metadata.miden.dependencies]
"miden:counter-contract" = { path = "../counter-contract" }

[package.metadata.component.target.dependencies]
"miden:counter-account" = { path = "../counter-contract/target/generated-wit/" }


[profile.release]
trim-paths = ["diagnostics", "object"]

[profile.dev]
trim-paths = ["diagnostics", "object"]
