cargo-features = ["trim-paths"]

[package]
name = "counter-note"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
miden = { git = "https://github.com/0xMiden/compiler" }

[package.metadata.miden]
project-kind = "note-script"

[package.metadata.component]
package = "miden:counter-note"

[package.metadata.miden.dependencies]
"miden:counter-contract" = { path = "../counter-contract" }

[package.metadata.component.target.dependencies]
"miden:counter-contract" = { path = "../counter-contract/target/generated-wit/" }

[profile.release]
trim-paths = ["diagnostics", "object"]

[profile.dev]
trim-paths = ["diagnostics", "object"]
