cargo-features = ["trim-paths"]

[package]
name = "note-script"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
miden = { git = "https://github.com/0xMiden/compiler" }

[package.metadata.miden]
project-kind = "note-script"

[package.metadata.component]
package = "miden:note-script"

[profile.release]
trim-paths = ["diagnostics", "object"]

[profile.dev]
trim-paths = ["diagnostics", "object"]
