cargo-features = ["trim-paths"]

[package]
name = "transaction-script"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
miden = { git = "https://github.com/0xMiden/compiler" }

[package.metadata.miden]
project-kind = "transaction-script"

[package.metadata.component]
package = "miden:transaction-script"

[profile.release]
trim-paths = ["diagnostics", "object"]

[profile.dev]
trim-paths = ["diagnostics", "object"]
